<resources>
    <string name="app_name">RatinaDeticPro</string>
    <!-- Strings related to signUp -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">SharedPreferences</string>
    <string name="id_user_key">id_user</string>
    <string name="eye_part_key">eye_part</string>
    <string name="insetimg">InsetIMG</string>
    <string name="chart">CHART</string>
    <string name="history">HISTORY</string>
    <string name="profile">PROFILE</string>
    <string name="aboutus">AboutUs</string>
    <string name="about_us">About Us</string>
    <string name="go_back">Go Back</string>
    <string name="retinal_diabetes_detection_app">Retinal Diabetes Detection App</string>
    <string name="logout">Logout</string>
    <string name="are_you_a_researcher_click_here">Are You A Researcher? Click Here!!</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="password">Password</string>
    <string name="card_id">Card ID</string>
    <string name="chart_by_gender">Chart By Gender</string>
    <string name="type">type</string>
    <string name="date">date</string>
    <string name="eye_side">eye side</string>
    <string name="reports">Reports</string>
    <string name="overall_chart">OverAll Chart</string>
    <string name="nodata">noData</string>
    <string name="choose_image">Choose Image</string>
    <string name="right">right</string>
    <string name="lift">lift</string>
    <string name="predict">Predict</string>
    <string name="add_image">Add Image</string>
    <string name="logo">Logo</string>
    <string name="for_more_details_click_here">For More Details Click Here</string>
    <string name="the_result_for_your_image">The Result For Your Image</string>

</resources>
