<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.ratinadeticpro.ui.ui.ChartByAge">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txt_type"
                android:layout_width="65dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/type"
                android:textColor="@color/wight"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txt_eyepart"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="22dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/eye_side"
                android:textColor="@color/wight"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"

                android:text="@string/date"
                android:textColor="@color/wight"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linear"
            android:padding="16dp"
            android:scrollbars="vertical" />


        <ImageView
            android:id="@+id/img_noData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/nodata"
            android:gravity="center_vertical"
            android:visibility="invisible"
            android:contentDescription="@string/nodata" />

        <ProgressBar
            android:id="@+id/prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"

            app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

    </RelativeLayout>
</layout>

